--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
-* {
+body, header {
     font-family: "Montserrat", sans-serif;
     box-sizing: border-box;
     margin: 0;
@@ -8,7 +8,9 @@
     background-color: #24252A;
 }
 
-li, a, button {
+/*------------------- Start of Navigation Bar ------------------- */
+
+header li, a, button {
     font-weight: 500;
     font-size: 16px;
     color: #ecf0f1;
@@ -19,7 +21,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 10%;
+    padding: 10px 10%;
 }
 
 .logo {
@@ -58,10 +60,18 @@ button:hover {
     background-color: rgba(0, 136, 169, 0.8);
 }
 
+/*------------------- End of Navigation Bar and Start of Contact Page ------------------- */
+
 .contact {
+    background-image: url(future.png);
+    height: 500px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
     display: flex;
     border-radius: 10px;
-    padding: 10px;
+    padding: 90px;
     align-content: center;
     justify-content: center;
 }
@@ -88,6 +98,7 @@ button:hover {
 }
 
 .contact input {
+    font-family: "Montserrat", sans-serif;
     display: inline-block;
     margin: 5px;
     border: 2px solid #ccc;
@@ -95,10 +106,10 @@ button:hover {
     box-sizing: border-box;
     margin-top: 4px;
     margin-bottom: 16px;
-    color: #ecf0f1;
 }
 
 .contact textarea{
+    font-family: "Montserrat", sans-serif;
     width: 100%;
     padding: 6px;
     border: 2px solid #ccc;
@@ -107,5 +118,87 @@ button:hover {
     margin-top: 4px;
     margin-bottom: 16px;
     resize: vertical;
+}
+
+/*------------------- End of Contact Page and Start of Home Page ------------------- */
+
+.main-background {
+    background-image: url(4562472.jpg);
+    height: 700px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.main-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    background-color: transparent;
+}
+
+#home-header {
+    font-size: 80px;
     color: #ecf0f1;
+    text-align: center;
+    background-color: transparent;
+}
+
+#home-subheader {
+    font-size: 24px;
+    color: #ecf0f1;
+    text-align: center;
+    margin: 20px;
+    background-color: transparent;
+}
+
+#start {
+    margin: 20px;
+    font-size: 24px;
+    background-color: black;
+}
+
+/*------------------- End of Home Page and Start of About Page ------------------- */
+
+.about-background {
+    background-image: url(4562472.jpg);
+    height: 700px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.about-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    background-color: transparent;
+}
+
+#about-header {
+    font-size: 64px;
+    color: #ecf0f1;
+    text-align: center;
+    background-color: transparent;
+}
+
+#about-h2 {
+    font-size: 26px;
+    text-align: center;
+}
+
+#about-h3 {
+    font-size: 20px;
+    color: #ecf0f1;
+    text-align: center;
+    margin: 20px;
+    background-color: transparent;
 }
