--- a/CSS/countdown.css
+++ b/CSS/countdown.css
@@ -15,9 +15,19 @@
 h1 {
   font-size: 64px;
     color: #ecf0f1;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: black;
     text-align: center;
     background-color: transparent;
-    padding: 50px;
+    padding: 40px;
+}
+
+h2 {
+  font-size: 28px;
+    color: white;
+    text-align: center;
+    background-color: transparent;
+    margin-top: -75px;
 }
 
  p {
@@ -27,3 +37,14 @@ h1 {
  span {
    font-size: 16px;
  }
+
+@media screen and (max-width: 700px) {
+  .countdown-el {
+    overflow-wrap: anywhere;
+    font-size: 8px;
+    height:100vh;
+    width: 100%;
+    line-height: 1;
+    flex-direction: column;
+  }
+}
