--- a/CSS/about.css
+++ b/CSS/about.css
@@ -36,3 +36,9 @@
     margin: 20px;
     background-color: transparent;
 }
+
+#esports {
+    font-size: 20px;
+    color: red;
+    border-bottom: 1px solid red;
+}
