--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -55,3 +55,19 @@
     margin-bottom: 16px;
     resize: vertical;
 }
+
+@media screen and (max-width: 700px) {
+    #contactme {
+        text-align: center;
+        font-size: 48px;
+        margin-top: -40px;
+    }
+
+    .contact input {
+        align-items: center;
+    }
+
+    .contact label {
+        text-align: center;
+    }
+}
