--- a/CSS/services.css
+++ b/CSS/services.css
@@ -110,3 +110,15 @@ h3 {
     color: green;
     margin-top: -20px;
 }
+
+@media screen and (max-width: 750px) {
+    .economy {
+         
+    }
+    .preferred {
+
+    }
+    .premium {
+        
+    }
+  }
