--- a/CSS/style.css
+++ b/CSS/style.css
@@ -57,3 +57,9 @@ button {
 button:hover {
     background-color: rgba(0, 136, 169, 0.8);
 }
+
+@media screen and (max-width: 700px) {
+    .nav-links li {
+      padding: 5px;
+    }
+}
