--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -1,5 +1,5 @@
 .contact {
-    background-image: url(Images/future.png);
+    background-image: url(../Images/contact.jpg);
     height:100vh;
     background-position: center;
     background-repeat: no-repeat;
@@ -56,7 +56,7 @@
     resize: vertical;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 500px) {
     #contactme {
         text-align: center;
         font-size: 48px;
