--- a/CSS/index.css
+++ b/CSS/index.css
@@ -38,12 +38,16 @@
     background-color: black;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
     #home-header {
         font-size: 40px;
     }
 
     #home-subheader {
         font-size: 16px;
+    }
+
+    #start {
+        font-size: 12px;
     }
   }
