Media query changes

--- a/CSS/countdown.css
+++ b/CSS/countdown.css
@@ -35,11 +35,16 @@ h2 {
  }
 
  span {
-   font-size: 16px;
+   font-size: 20px;
  }
 
 @media screen and (max-width: 700px) {
+  
   .countdown-el {
     font-size: 8px;
+  }
+
+  .big-text {
+    margin-bottom: -3px;
   }
 }
