--- a/CSS/about.css
+++ b/CSS/about.css
@@ -45,6 +45,7 @@
 
 .statement {
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
     background-image: url(../Images/statement.jpg);
     height: 700px;
@@ -69,7 +70,6 @@
     flex-direction: row;
     justify-content: center;
     font-size: 36px;
-    padding-top: 50px;
 }
 
 #loved {
@@ -95,8 +95,8 @@
 }
 
 .game-img {
-    height: 200px;
-    width: 300px;
+    height: 150px;
+    width: 250px;
 }
 
 @media screen and (max-width: 700px) {
@@ -109,10 +109,13 @@
     }
 
     .statement {
+        justify-content: space-between;
         height: 500px;
     }
 
     #statement-title {
+        padding-left: 20px;
+        padding-right: 20px;
         font-size: 24px;
     }
 
@@ -128,6 +131,10 @@
         font-size: 16px;
     }
 
+    #support {
+        font-size: 36px;
+    }
+
     .games {
         height: 120px;
     }
@@ -136,31 +143,44 @@
         height: 100px;
         width: 100px;
     }
+}
 
-    @media screen and (max-width: 500px) {
+@media screen and (max-width: 500px) {
 
-        #about-header {
-            font-size: 24px;
-        }
-
-        #statement-title {
-            color: #ecf0f1;
-            font-size: 18px;
-        }
-
-        #statement-para {
-            color: #ecf0f1;
-            font-size: 14px;
-        }
-
-        .rating {
-            margin-top: -60px;
-            font-size: 18px;
-        }
-    
-        #loved {
-            color: #ecf0f1;
-            font-size: 14px;
-        }
+    #about-header {
+        font-size: 24px;
     }
-  }
+
+    #statement-title {
+        color: #ecf0f1;
+        font-size: 18px;
+    }
+
+    #statement-para {
+        color: #ecf0f1;
+        font-size: 14px;
+    }
+
+    .rating {
+        margin-top: -60px;
+        font-size: 18px;
+    }
+    
+    #loved {
+        color: #ecf0f1;
+        font-size: 14px;
+    }
+
+    #support {
+        font-size: 24px;
+    }
+
+    .games {
+        height: 100px;
+    }
+
+    .game-img {
+        height: 80px;
+        width: 80px;
+    }
+}
