--- a/CSS/about.css
+++ b/CSS/about.css
@@ -101,7 +101,7 @@
 
 @media screen and (max-width: 700px) {
     .about-background {
-        width: 80%;
+        height: 80%;
     }
     
     #about-header {
@@ -148,9 +148,9 @@
 @media screen and (max-width: 500px) {
 
     .about-background {
-        width: 70%;
+        height: 70%;
     }
-
+    
     #about-header {
         font-size: 24px;
     }
