Fixed button errors

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -36,6 +36,9 @@
     margin: 20px;
     font-size: 24px;
     background-color: black;
+    border-radius: 1.5em;
+    display: inline-block; /* modified to support vertical-align */
+    width: 200px;
 }
 
 @media screen and (max-width: 700px) {
