--- a/CSS/about.css
+++ b/CSS/about.css
@@ -99,6 +99,28 @@
     width: 250px;
 }
 
+button {
+    padding: 9px 25px;
+    background-color: rgba(0, 136, 169, 1);
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+}
+
+button:hover {
+    background-color: rgba(0, 136, 169, 0.8);
+}
+
+#learn-more {
+    margin: 20px;
+    font-size: 24px;
+    background-color: black;
+    border-radius: 1.5em;
+    display: inline-block; /* modified to support vertical-align */
+    width: 200px;
+}
+
 @media screen and (max-width: 700px) {
     #about-header {
         font-size: 36px;
