--- a/CSS/about.css
+++ b/CSS/about.css
@@ -25,6 +25,7 @@
 }
 
 #about-h2 {
+    margin-top: 20px;
     font-size: 26px;
     text-align: center;
 }
@@ -54,15 +55,19 @@
 }
 
 #statement-title {
+    padding-left: 20px;
+    padding-right: 20px;
     font-family: monospace;
     font-size: 36px;
     padding-top: 50px;
+    color: #ecf0f1;
 }
 
 #statement-para {
     padding-left: 100px;
     padding-right: 100px;
     font-size: 24px;
+    color: #ecf0f1;
 }
 
 .rating {
@@ -75,6 +80,7 @@
 #loved {
     margin-top: -2px;
     font-size: 42px;
+    color: #ecf0f1;
 }
 
 .checked {
@@ -91,12 +97,14 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    height: 220px;
+    height: 250px;
 }
 
 .game-img {
+    padding-left: 5px;
+    padding-right: 5px;
     height: 150px;
-    width: 250px;
+    width: 225px;
 }
 
 button {
@@ -121,10 +129,35 @@ button:hover {
     width: 200px;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
     #about-header {
-        font-size: 36px;
+        padding-left: 10px;
+        padding-right: 10px;
+        font-size: 40px;
+        color: #ecf0f1;
+        text-align: center;
+        background-color: transparent;
     }
+    
+    #about-h2 {
+        font-size: 20px;
+        text-align: center;
+    }
+    
+    #about-h3 {
+        font-size: 18px;
+        color: #ecf0f1;
+        text-align: center;
+        margin: 20px;
+        background-color: transparent;
+    }
+    
+    #esports {
+        font-size: 18px;
+        color: red;
+        border-bottom: 1px solid red;
+    }
+    
 
     .statement {
         justify-content: space-between;
@@ -154,19 +187,62 @@ button:hover {
     }
 
     .games {
-        height: 120px;
+        height: 150px;
     }
 
     .game-img {
         height: 100px;
-        width: 100px;
+        width: 150px;
+    }
+
+    #learn-more {
+        font-size: 20px;
+        width: 150px;
     }
 }
 
 @media screen and (max-width: 500px) {
+
+    .about-text {
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        background-color: transparent;
+    }
     
     #about-header {
-        font-size: 24px;
+        font-size: 48px;
+        color: #ecf0f1;
+        text-align: center;
+        background-color: transparent;
+    }
+    
+    #about-h2 {
+        font-size: 18px;
+        text-align: center;
+    }
+    
+    #about-h3 {
+        padding-left: 5px;
+        padding-right: 5px;
+        font-size: 16px;
+        color: #ecf0f1;
+        text-align: center;
+        margin: 20px;
+        background-color: transparent;
+    }
+    
+    #esports {
+        font-size: 16px;
+        color: red;
+        border-bottom: 1px solid red;
+    }
+    
+    #about-header {
+        font-size: 20px;
     }
 
     #statement-title {
@@ -175,12 +251,13 @@ button:hover {
     }
 
     #statement-para {
+        padding-left: 40px;
+        padding-right: 40px;
         color: #ecf0f1;
-        font-size: 14px;
+        font-size: 10px;
     }
 
     .rating {
-        margin-top: -60px;
         font-size: 18px;
     }
     
@@ -194,11 +271,40 @@ button:hover {
     }
 
     .games {
-        height: 100px;
+        height: 125px;
     }
 
     .game-img {
         height: 80px;
-        width: 80px;
+        width: 100px;
+    }
+
+    #learn-more {
+        font-size: 16px;
+        width: 120px;
+    }
+}
+
+@media screen and (max-width: 300px) {
+    #statement-title {
+        color: #ecf0f1;
+        font-size: 14px;
+    }
+
+    #statement-para {
+        padding-left: 20px;
+        padding-right: 20px;
+        color: #ecf0f1;
+        font-size: 8px;
+    }
+
+    .rating {
+        margin-bottom: 0;
+        font-size: 12px;
+    }
+    
+    #loved {
+        color: #ecf0f1;
+        font-size: 10px;
     }
 }
