--- a/CSS/countdown.css
+++ b/CSS/countdown.css
@@ -39,7 +39,14 @@ h2 {
  }
 
 @media screen and (max-width: 700px) {
-  
+  h1 {
+    font-size: 48px;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+
   .countdown-el {
     font-size: 8px;
   }
